--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,7 @@
   "background": {
     "scripts": ["app/background.js"]
   },
+  "permissions": [ "<all_urls>","activeTab"],
   "browser_action": {},
   "content_scripts" : [
     {
