--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-konva": "^17.0.2-4"
+    "react-konva": "^17.0.2-4",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
