--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,17 +6,9 @@
   "background": {
     "scripts": ["app/background.js"]
   },
-  "permissions": [ "<all_urls>","activeTab", "tabs", "storage"],
+  "permissions": [ "activeTab", "tabs", "storage"],
   "browser_action": {},
-  "content_scripts" : [
-    {
-      "matches": [ "<all_urls>" ],
-      "css": ["/css/root.css"],
-      "js": ["/static/js/content.js"]
-    }
-  ],
   "web_accessible_resources":[
     "/static/css/content.css", "/static/media/*"
-  ],
-  "content_security_policy": "script-src 'self' 'sha256-GgRxrVOKNdB4LrRsVPDSbzvfdV4UqglmviH9GoBJ5jk='; object-src 'self'"
+  ]
 }
