feat(textbox): Add textbox to tools

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-konva": "^17.0.2-4",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
