--- a/package.json
+++ b/package.json
@@ -82,48 +82,50 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "resolve": "^1.17.0",
-    "whatwg-fetch": "3.2.0",
-    "raf": "3.4.1",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "promise": "8.0.1",
-    "@babel/runtime": "^7.10.4",
-    "autoprefixer": "^10.2.6",
-    "case-sensitive-paths-webpack-plugin": "^2.3.0",
-    "chalk": "^4.1.0",
-    "css-loader": "^5.2.6",
-    "dotenv": "^8.2.0",
-    "dotenv-expand": "^5.1.0",
-    "fs-extra": "^9.0.1",
     "@babel/core": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@babel/runtime": "^7.10.4",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
+    "autoprefixer": "^10.2.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^9.1.2",
     "browserslist": "^4.16.6",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
+    "chalk": "^4.1.0",
+    "css-loader": "^5.2.6",
     "css-what": "^5.0.1",
-    "eslint": "^7.4.0",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
+    "eslint": "^7.29.0",
     "eslint-config-react-app": "^5.2.1",
+    "eslint-config-standard": "^16.0.3",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.0.7",
     "file-loader": "^6.0.0",
+    "fs-extra": "^9.0.1",
     "glob-parent": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "npm-watch": "^0.9.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^5.3.0",
+    "promise": "8.0.1",
+    "raf": "3.4.1",
     "react-dev-utils": "^11.0.4",
+    "resolve": "^1.17.0",
     "sass-loader": "^10.0.3",
     "style-loader": "^1.2.1",
     "sw-precache-webpack-plugin": "^1.0.0",
@@ -132,6 +134,7 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "^2.2.0"
+    "webpack-manifest-plugin": "^2.2.0",
+    "whatwg-fetch": "3.2.0"
   }
 }
